[build-system]
requires = ["setuptools>=65.0", "wheel >= 0.38"]
build-backend = "setuptools.build_meta"

[project]
name = "pnp-parser"
version = "1.0.0"
description = "PnP (FRU) json parser to Pipeline Manager graph"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer",
    "rich",
    "pipeline-manager@git+https://github.com/antmicro/kenning-pipeline-manager"
]

[tool.ruff]
select = ["E", "F", "N", "B", "A", "RET"]
line-length = 120
exclude = [
	  "src/__init__.py"
]

[tool.black]
line-length = 120

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true

[project.scripts]
pnp-parser = "pnp_parser.main:app"
