[build-system]
requires = ["setuptools>=65.0", "wheel >= 0.38"]
build-backend = "setuptools.build_meta"

[project]
name = "fru2graph"
version = "1.0.0"
description = "A tool used for generating Pipeline Manager graphs based on OCP DC-MHS FRU JSON files"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
  "typer",
  "rich",
  "pipeline-manager@git+https://github.com/antmicro/kenning-pipeline-manager"
]

[project.optional-dependencies]
dev = [
  "ruff",
  "black",
  "basedpyright"
]

[tool.ruff]
select = ["E", "F", "N", "B", "A", "RET"]
line-length = 120
exclude = [
  "src/__init__.py"
]

[tool.black]
line-length = 120

[tool.pyright]
typeCheckingMode = "standard"

[project.scripts]
fru2graph = "fru2graph.main:app"
